--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">60km for BeCode</a>
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">Cryptorun for BeCode</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
@@ -57,17 +57,20 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#support" data-i18n="nav.support"></a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#team" data-i18n="nav.team"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#blog" data-i18n="nav.blog"></a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#faq" data-i18n="nav.faq"></a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#" data-i18n="nav.press"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#contact" data-i18n="nav.contact"></a>
+          <a class="nav-link js-scroll-trigger" target="_blank" href="https://medium.com/@vanderstraeten.thomas" data-i18n="nav.blog"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" target="_blank" href="https://eightytwentylab.typeform.com/to/T70a1n" data-i18n="nav.contact"></a>
         </li>
       </ul>
     </div>
@@ -92,7 +95,7 @@
 
     <!-- partial:partials/_flash.html -->
     <div id="flash" class="flash text-center align-middle">
-  <div class="flash__text">Already <span class="flash__text-highlight">XXX ETH</span> collected, and only <span class="flash__text-highlight">XX days</span> to go!</div>
+  <div class="flash__text">The Ethereum Smart contract is currently in test phase, <u><a style="font-weight: bold; color: white;" target="_blank" href="https://medium.com/@vanderstraeten.thomas">discover it here</a></u>! Fundraising start expected around April 15th</div>
 </div>
 
     <!-- partial -->
@@ -111,7 +114,7 @@
       <div class="col-md-4">
         <img class="mx-auto rounded-circle medium-sized" src="img/logos/brussels.jpg" alt="">
         <h4 class="service-heading">A sponsored ultra-run around the Belgian capital</h4>
-        <p class="text-muted">In May 2018, Thomas Vanderstraeten will run a bit more than 60km along Brussels' Green Belt in one go, in a bid to attract interest on BeCode</p>
+        <p class="text-muted">On May 19th, Thomas Vanderstraeten will run a bit more than 60km along Brussels' Green Belt in one go, in a bid to attract interest on BeCode</p>
       </div>
       <div class="col-md-4">
         <img class="mx-auto rounded-circle medium-sized" src="img/logos/becode.png" alt="">
@@ -140,19 +143,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4 col-sm-6 portfolio-item">
-        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-          <div class="portfolio-hover">
-            <div class="portfolio-hover-content">
-              <i class="fa fa-plus fa-3x"></i>
-            </div>
-          </div>
-          <img class="img-fluid" src="img/education.png" alt="">
-        </a>
-        <div class="portfolio-caption">
-          <h4>Scarce opportunities for tech education in Belgium</h4>
-        </div>
-      </div>
+
       <div class="col-md-4 col-sm-6 portfolio-item">
         <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
           <div class="portfolio-hover">
@@ -164,6 +155,19 @@
         </a>
         <div class="portfolio-caption">
           <h4>A pressing need of tech talent in the industry</h4>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6 portfolio-item">
+        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+          <div class="portfolio-hover">
+            <div class="portfolio-hover-content">
+              <i class="fa fa-plus fa-3x"></i>
+            </div>
+          </div>
+          <img class="img-fluid" src="img/education.png" alt="">
+        </a>
+        <div class="portfolio-caption">
+          <h4>Scarce opportunities for tech education in Belgium</h4>
         </div>
       </div>
       <div class="col-md-4 col-sm-6 portfolio-item">
@@ -199,7 +203,8 @@
               <!-- Project Details Go Here -->
               <h2>Tech education in Belgium</h2>
               <img class="img-fluid d-block mx-auto img-modal" src="img/education.png" alt="">
-              <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+              <p>Whereas a large amount of digital job vacancies remain unfilled - and that number will increase dramatically in the years to come - most of these professions don't require an engineering degree at all. With a logical mindset, a lot of motivation and some basic training,
+anyone can learn to create mobile applications and websites and turn that into a profession! However, no mainstream educational structures exist to teach these skils en masse. This is a pity, as 23% of Belgian youth are currently unemployed.</p>
               <button class="btn btn-primary" data-dismiss="modal" type="button">
                 <i class="fa fa-times"></i>
                 Close</button>
@@ -227,7 +232,7 @@
                 <!-- Project Details Go Here -->
                 <h2>The need for tech talent</h2>
                 <img class="img-fluid d-block mx-auto img-modal" src="img/talent.png" alt="">
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>It is expected that there will be about 30.000 vacancies in Belgium by 2020 due to shortfall of e-skilled workers. 70% of employers blame inadequate training for the shortfall in skilled workers.</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fa fa-times"></i>
                   Close</button>
@@ -255,7 +260,8 @@
                   <!-- Project Details Go Here -->
                   <h2>How BeCode bridges the gap</h2>
                   <img class="img-fluid d-block mx-auto img-modal" src="img/logos/becode.png" alt="">
-                  <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                  <p>BeCode aims at providing competitive and responsible coding school programs, accessible to all. The program provides individual support for securing a sustainable profession. After launching its first center in Brussels with more than 100 people continuously in training and a first branch in Charleroi,
+BeCode is looking to open up all over the country, partnering with local stakeholders (private and public) working alongside future students and employers!</p>
                   <button class="btn btn-primary" data-dismiss="modal" type="button">
                     <i class="fa fa-times"></i>
                     Close</button>
@@ -331,10 +337,10 @@
             <div class="timeline-panel">
               <div class="timeline-heading">
                 <h4>The challenge is coming soon...</h4>
-                <h4 class="subheading">Save the date: 12/05/2018</h4>
+                <h4 class="subheading">Save the date: 19/05/2018</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">It's not long before the start is given! You can follow all the preparation on <a href="#">Twitter</a> or on the <a href="#">blog</a></p>
+                <p class="text-muted">It's not long before the start is given! You can follow all the preparation on the <a target="_blank" href="https://medium.com/@vanderstraeten.thomas">blog</a> of Thomas and the <a target="_blank" href="https://www.facebook.com/becode.org/">Facebook page</a> of BeCode!</p>
               </div>
             </div>
           </li>
@@ -359,15 +365,15 @@
   <div class="container">
     <div class="row text-center">
       <div class="col-md-4">
-        <button class="btn btn-xl">Share the word</button>
+        <a href="https://www.facebook.com/becode.org/"><button style="cursor: pointer;" class="btn btn-xl">Share the BeCode love</button></a>
         <p class="text-muted" style="padding-right: 20px; padding-left: 20px; padding-top: 30px;">The primary goal of this challenge is to spread the word on the existence of BeCode, so that more and more students can join and benefit from free tech education. Maybe your share will motivate someone to join!</p>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-xl-secondary">Donate</button>
+        <a href="https://eightytwentylab.typeform.com/to/Nyv2Vf"><button style="cursor: pointer;"class="btn btn-xl-secondary">Donate ETH</button></a>
         <p class="text-muted" style="padding-right: 20px; padding-left: 20px; padding-top: 30px;">Dive deep into an exciting new technology and perform your first crypto-currency transfer to the smart contract. What better recipient than a tech non-profit for this?</p>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-xl">Run with Thomas</button>
+        <a href="https://eightytwentylab.typeform.com/to/Nyv2Vf"><button class="btn btn-xl" style="cursor: pointer;">Run with Thomas</button></a>
         <p class="text-muted" style="padding-right: 20px; padding-left: 20px; padding-top: 30px;">60km is a long way to go, and happiness is best when it is shared. So, hop in your running shoes and join Thomas along the path to discover Brussels' best green areas. 1km, 5km, 10km...pick your game!</p>
       </div>
     </div>
@@ -378,7 +384,7 @@
 
     <!-- partial:partials/_team.html -->
     <!-- Team -->
-    <section class="bg-light" id="team">
+    <!-- <section class="bg-light" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -436,54 +442,19 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/anon.jpg" alt="">
-              <h4>XXX YYYY</h4>
-              <p class="text-muted">Running mentor</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
+
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- partial -->
 
-
-
-    <!-- partial:partials/_blog.html -->
-    <section id="blog">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Latest blog articles</h2>
-      </div>
-    </div>
-  </div>
-</section>
-
-    <!-- partial -->
 
 
 
     <!-- partial:partials/_faq.html -->
-    <section id="faq" class="bg-light">
+    <!-- <section id="faq" class="bg-light">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
@@ -534,7 +505,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
     <!-- partial -->
 
@@ -544,23 +515,18 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; 60km for BeCode 2017-2018</span>
+            <span class="copyright">Copyright &copy; 2018 <a href="https://cryptizens.io/" target="_blank">Cryptizens.io</a></span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-twitter"></i>
+                <a href="https://medium.com/@vanderstraeten.thomas" target="_blank">
+                  <i class="fa fa-medium"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/becode.org/" target="_blank">
                   <i class="fa fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-linkedin"></i>
                 </a>
               </li>
             </ul>
@@ -568,7 +534,7 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a target="_blank" href="https://eightytwentylab.typeform.com/to/T70a1n">Contact</a>
               </li>
             </ul>
           </div>
@@ -611,6 +577,7 @@
                 faq: 'FAQ',
                 team: 'Team',
                 contact: 'Contact',
+                press: 'Press',
                 blog: 'Blog'
               },
               header: {
