--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Thomas Vanderstraeten">
 
-    <title>60km for Becode</title>
+    <title>Cryptorun - 60km for Becode</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="shortcut icon" type="image/png" href="https://s3.eu-central-1.amazonaws.com/everstories.city/favicon.png"/>
+  	<meta name="description" content="An experimental artistic project to engrave the stories of our cities forever on the Blockchain">
+  	<meta name="author" content="Cryptizen Kane">
+
+  	<!-- Schema.org markup for Google+ -->
+    <meta itemprop="name" content="Everstories">
+    <meta itemprop="description" content="An experimental artistic project to engrave the stories of our cities forever on the Blockchain">
+    <meta itemprop="image" content="https://s3.eu-central-1.amazonaws.com/everstories.city/social.png">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:site" content="@CryptizenKane">
+    <meta name="twitter:title" content="Everstories">
+    <meta name="twitter:description" content="An experimental artistic project to engrave the stories of our cities forever on the Blockchain">
+    <meta name="twitter:creator" content="@CryptizenKane">
+    <meta name="twitter:image:src" content="https://s3.eu-central-1.amazonaws.com/everstories.city/social.png">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Everstories" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://everstories.city/" />
+    <meta property="og:image" content="https://s3.eu-central-1.amazonaws.com/everstories.city/social.png" />
+    <meta property="og:description" content="An experimental artistic project to engrave the stories of our cities forever on the Blockchain" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
