Great progress on all fronts

--- a/index.html
+++ b/index.html
@@ -8,32 +8,30 @@
     <meta name="description" content="">
     <meta name="author" content="Thomas Vanderstraeten">
 
-    <title>Cryptorun - 60km for Becode</title>
+    <title>Cryptorun Brussels</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/png" href="https://s3.eu-central-1.amazonaws.com/everstories.city/favicon.png"/>
-  	<meta name="description" content="An experimental artistic project to engrave the stories of our cities forever on the Blockchain">
+    <link rel="shortcut icon" type="image/png" href="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/favicon.png"/>
+  	<meta name="description" content="60km ultrarun for BeCode, with a crypto fundraising and a Blockchain-connected GPS">
   	<meta name="author" content="Cryptizen Kane">
 
   	<!-- Schema.org markup for Google+ -->
-    <meta itemprop="name" content="Everstories">
-    <meta itemprop="description" content="An experimental artistic project to engrave the stories of our cities forever on the Blockchain">
-    <meta itemprop="image" content="https://s3.eu-central-1.amazonaws.com/everstories.city/social.png">
+    <meta itemprop="name" content="Cryptorun Brussels">
+    <meta itemprop="description" content="60km ultrarun for BeCode, with a crypto fundraising and a Blockchain-connected GPS">
+    <meta itemprop="image" content="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/social.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:site" content="@CryptizenKane">
-    <meta name="twitter:title" content="Everstories">
-    <meta name="twitter:description" content="An experimental artistic project to engrave the stories of our cities forever on the Blockchain">
+    <meta name="twitter:title" content="Cryptorun Brussels">
+    <meta name="twitter:description" content="60km ultrarun for BeCode, with a crypto fundraising and a Blockchain-connected GPS">
     <meta name="twitter:creator" content="@CryptizenKane">
-    <meta name="twitter:image:src" content="https://s3.eu-central-1.amazonaws.com/everstories.city/social.png">
+    <meta name="twitter:image:src" content="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/social.png">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Everstories" />
+    <meta property="og:title" content="Cryptorun Brussels" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://everstories.city/" />
-    <meta property="og:image" content="https://s3.eu-central-1.amazonaws.com/everstories.city/social.png" />
-    <meta property="og:description" content="An experimental artistic project to engrave the stories of our cities forever on the Blockchain" />
+    <meta property="og:url" content="https://cryptorun.brussels/" />
+    <meta property="og:image" content="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/social.png" />
+    <meta property="og:description" content="60km ultrarun for BeCode, with a crypto fundraising and a Blockchain-connected GPS" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
