Add GitHub link

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <!-- partial:partials/_flash.html -->
     <div id="flash" class="flash text-center align-middle">
-  <div class="flash__text">The Ethereum Smart contract is currently in test phase, <u><a style="font-weight: bold; color: white;" target="_blank" href="https://medium.com/@vanderstraeten.thomas">discover it here</a></u>! Fundraising start expected around April 15th</div>
+  <div class="flash__text">The Ethereum Smart contract is currently in test phase, <u><a style="font-weight: bold; color: white;" target="_blank" href="https://github.com/thomasvds/cryptorun-back">discover it here</a></u>! Fundraising start expected around April 15th</div>
 </div>
 
     <!-- partial -->
@@ -550,6 +550,11 @@ BeCode is looking to open up all over the country, partnering with local stakeho
               <li class="list-inline-item">
                 <a href="https://www.facebook.com/becode.org/" target="_blank">
                   <i class="fa fa-facebook"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/thomasvds/cryptorun-back" target="_blank">
+                  <i class="fa fa-github"></i>
                 </a>
               </li>
             </ul>
