Add sumo script

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/i18next/8.1.0/i18next.min.js" ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-i18next/1.2.0/jquery-i18next.min.js" ></script>
 
+    <script async>(function(s,u,m,o,j,v){j=u.createElement(m);v=u.getElementsByTagName(m)[0];j.async=1;j.src=o;j.dataset.sumoSiteId='0a3521b5d39e38091738decf83d60f77eac5b4f4df856ee4514517485865ea2b';v.parentNode.insertBefore(j,v)})(window,document,'script','//load.sumo.com/');</script>
+
   </head>
 
   <body id="page-top">
