Update target top

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <a class="nav-link js-scroll-trigger" target="_blank" href="https://medium.com/@vanderstraeten.thomas" data-i18n="navbar.blog"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" target="_blank" href="mailto:thomas@cryptizens.io" data-i18n="navbar.contact"></a>
+          <a class="nav-link js-scroll-trigger" target="_top" href="mailto:thomas@cryptizens.io" data-i18n="navbar.contact"></a>
         </li>
       </ul>
     </div>
@@ -551,7 +551,7 @@
           <div class="col-md-4">
             <ul class="list-inline quicklinks">
               <li class="list-inline-item">
-                <a target="_blank" href="mailto:thomas@cryptizens.io">Contact</a>
+                <a target="_top" href="mailto:thomas@cryptizens.io">Contact</a>
               </li>
               <li class="list-inline-item">
                 <a target="_blank" href="https://cryptorun.brussels?lang=fr">FR</a>
