Add team section

--- a/index.html
+++ b/index.html
@@ -82,12 +82,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#support" data-i18n="navbar.support"></a>
         </li>
-        <!-- <li class="nav-item">
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#team" data-i18n="navbar.team"></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#faq" data-i18n="navbar.faq"></a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#" data-i18n="navbar.press"></a>
         </li>
@@ -396,69 +393,42 @@
 
     <!-- partial:partials/_team.html -->
     <!-- Team -->
-    <!-- <section class="bg-light" id="team">
+    <section class="bg-light" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Meet the <span class="highlighted">team</span></h2>
-            <h3 class="section-subheading text-muted">Because it's always better together</h3>
+            <h2 class="section-heading" data-i18n="[html]team.title"></h2>
+            <h3 class="section-subheading text-muted" data-i18n="team.subtitle"></h3>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/thomas.jpg" alt="">
-              <h4>Thomas Vanderstraeten</h4>
-              <p class="text-muted">Runner & Coder</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
+              <img class="mx-auto rounded-circle" src="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/students.png" alt="">
+              <h4 data-i18n="team.item_1.name"></h4>
+              <br>
+              <p class="text-muted" data-i18n="team.item_1.description"></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/anon.jpg" alt="">
-              <h4>XXX YYY</h4>
-              <p class="text-muted">Tech mentor</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
+              <img class="mx-auto rounded-circle" src="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/thom.png" alt="">
+              <h4 data-i18n="team.item_2.name"></h4>
+              <br>
+              <p class="text-muted" data-i18n="[html]team.item_2.description"></p>
             </div>
           </div>
           <div class="col-sm-4">
-
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/staff.png" alt="">
+              <h4 data-i18n="team.item_3.name"></h4>
+              <br>
+              <p class="text-muted" data-i18n="team.item_3.description"></p>
+            </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- partial -->
 
@@ -542,7 +512,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/thomasvds/cryptorun-back" target="_blank">
+                <a href="https://github.com/Cryptizens/cryptorun-back" target="_blank">
                   <i class="fa fa-github"></i>
                 </a>
               </li>
@@ -593,7 +563,7 @@
                 cta: 'Découvrir'
               },
               flash: {
-                text: "Le smart contract est actuellement en phase de test, <u><a style='font-weight: bold; color: white;' target='_blank' href='https://github.com/thomasvds/cryptorun-back'>découvrez-le ici</a></u>! La collecte démarrera autour du 15 avril"
+                text: "Le smart contract est actuellement en phase de test, <u><a style='font-weight: bold; color: white;' target='_blank' href='https://github.com/Cryptizens/cryptorun-back'>découvrez-le ici</a></u>! La collecte démarrera autour du 15 avril"
               },
               discover: {
                 title: "Un <span class='highlighted'>challenge</span> excitant",
@@ -668,6 +638,22 @@
                   cta: "Courez avec Thomas",
                   description: "60km, c'est une sacrée distance, et le bonheur est bien meilleur lorsqu'il est partagé. Sautez dans vos chaussures de running et choississez votre distance: 5, 10, 20km...il y en a pour tous les goûts !"
                 }
+              },
+              team: {
+                title: "Meet the <span class='highlighted'>team</span>",
+                subtitle: "Parce qu'ensemble on va plus loin",
+                item_1: {
+                  name: "Les students BeCode",
+                  description: "Ce sont eux les vrais héros ! Ils s'entraînent dur pendant 6 mois, pas pour courir mais pour devenir des Ninjas du code. Et devoir affronter des bugs dans en apprenant le PHP, c'est plus dur que 60km...respect."
+                },
+                item_2: {
+                  name: "Thomas Vanderstraeten",
+                  description: "Le coureur et codeur de l'aventure. Il aime courir et expérimenter via <a href='https://cryptizens.io' target='_blank'>Cryptizens.io</a>, son Blockchain lab. Sa devise: <i>C'est vrai que 60km c'est un peu longuet, mais ça ira plus vite pour traverser Bruxelles vu le monde dans les embouts'</i>."
+                },
+                item_3: {
+                  name: "Le staff BeCode",
+                  description: "Quelle équipe ! Cette team de super-héros s'est embarquée dans une mission pour améliorer et rendre plus accessible l'éducation tech en Belgique. Il suffit de leur parler pour se rendre compte à quel point ils brûlent d'énergie positive."
+                }
               }
             }
           },
@@ -690,7 +676,7 @@
                 cta: 'Discover'
               },
               flash: {
-                text: "The Ethereum Smart contract is currently in test phase, <u><a style='font-weight: bold; color: white;' target='_blank' href='https://github.com/thomasvds/cryptorun-back'>discover it here</a></u>! Fundraising start expected around April 15th"
+                text: "The Ethereum Smart contract is currently in test phase, <u><a style='font-weight: bold; color: white;' target='_blank' href='https://github.com/Cryptizens/cryptorun-back'>discover it here</a></u>! Fundraising start expected around April 15th"
               },
               discover: {
                 title: "An exciting <span class='highlighted'>challenge</span>",
@@ -764,6 +750,22 @@
                 item_3: {
                   cta: "Run with Thomas",
                   description: "60km is a long way to go, and happiness is best when it is shared. So, hop in your running shoes and join Thomas along the path to discover Brussels' best green areas. 1km, 5km, 10km...pick your game!"
+                }
+              },
+              team: {
+                title: "Meet the <span class='highlighted'>team</span>",
+                subtitle: "Because it's always better together",
+                item_1: {
+                  name: "The BeCode students",
+                  description: "They're the real heroes! They train hard, not to run but to become coding master. And this lasts 6 months, not only 60km. Respect!"
+                },
+                item_2: {
+                  name: "Thomas Vanderstraeten",
+                  description: "He's the runner and coder - he already ran a few marathons and also runs <a href='https://cryptizens.io' target='_blank'>Cryptizens.io</a>, a Blockchain lab. Unlike Forrest Gump, he runs for a very clear purpose: raising awareness around this great BeCode initiative."
+                },
+                item_3: {
+                  name: "The BeCode staff",
+                  description: "Wow, what energy they have! These folks really are on a mission to bring good tech education to everyone in Belgium - you can litteraly feel they're burning with energy when you see them."
                 }
               }
             }
