--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                 cta: 'Découvrir'
               },
               flash: {
-                text: "Le smart contract est actuellement en phase de test, <u><a style='font-weight: bold; color: white;' target='_blank' href='https://github.com/Cryptizens/cryptorun-back'>découvrez-le ici</a></u>! La collecte démarrera autour du 25 avril"
+                text: "La collecte a démarré ! <u><a style='font-weight: bold; color: white;' target='_blank' href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>Inscrivez-vous ici</a></u> pour donner des Ethers ou courir avec Thomas!"
               },
               discover: {
                 title: "Un <span class='highlighted'>challenge</span> excitant",
@@ -676,7 +676,7 @@
                 cta: 'Discover'
               },
               flash: {
-                text: "The Ethereum Smart contract is currently in test phase, <u><a style='font-weight: bold; color: white;' target='_blank' href='https://github.com/Cryptizens/cryptorun-back'>discover it here</a></u>! Fundraising start expected around April 25th"
+                text: "The fundraising is live! <u><a style='font-weight: bold; color: white;' target='_blank' href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>Click here</a></u> to contribute or run with Thomas!"
               },
               discover: {
                 title: "An exciting <span class='highlighted'>challenge</span>",
