--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                 cta: 'Découvrir'
               },
               flash: {
-                text: "Le <u><a style='font-weight: bold; color: white;' target='_blank' href='https://etherscan.io/address/0x7ad38438b15338f6d1846961903055ada6fff054'>smart contract</a></u> est déployé ! <u><a style='font-weight: bold; color: white;' target='_blank' href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>Inscrivez-vous ici</a></u> pour donner des Ethers ou courir avec Thomas."
+                text: "Le challenge a été accompli ! Thomas a couru 65KM, et 1.85 ETH ont été collectés au total. Un énorme merci à tous !"
               },
               discover: {
                 title: "Un <span class='highlighted'>challenge</span> excitant",
@@ -704,7 +704,7 @@
                 cta: 'Discover'
               },
               flash: {
-                text: "The fundraising is live: <u><a style='font-weight: bold; color: white;' target='_blank' href='https://etherscan.io/address/0x7ad38438b15338f6d1846961903055ada6fff054'>see the smart contract</a></u>! <u><a style='font-weight: bold; color: white;' target='_blank' href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>Click here</a></u> to contribute or run with Thomas!"
+                text: "The challenge was successfully accomplished! Thomas ran 65KM in total and 1.85 ETH were collected. A huge thanks to all that made this possible!"
               },
               discover: {
                 title: "An exciting <span class='highlighted'>challenge</span>",
